Pacer working, connecting plugins

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,10 @@ IF(RANDOM_FRICTION)
   add_definitions( -DRANDOM_FRICTION)
 ENDIF(RANDOM_FRICTION)
 
+IF(BUILD_PLUGINS)
+  add_definitions( -DUSE_PLUGINS)
+ENDIF(BUILD_PLUGINS)
+
 IF(CONSOLE)
   add_definitions( -DUSE_GLCONSOLE)
 ENDIF(CONSOLE)
