eef PID controller and working IK solver (3d eef goal)

--- a/example/plugins/CMakeLists.txt
+++ b/example/plugins/CMakeLists.txt
@@ -10,5 +10,8 @@ target_link_libraries(gait-planner ${REQLIBS})
 add_library(joint-PID-controller MODULE joint-PID-controller.cpp)
 target_link_libraries(joint-PID-controller ${REQLIBS})
 
+add_library(eef-PID-controller MODULE eef-PID-controller.cpp)
+target_link_libraries(eef-PID-controller ${REQLIBS})
+
 add_library(stand-trajectory MODULE stand.cpp)
 target_link_libraries(stand-trajectory ${REQLIBS})
