tracking down 2 bugs -- (1): Robot side-steps and falls during figure 8 trial, this maneuver shouldn happen - bug in either drive-robot or gait-planner.   (2): Idyn does not solve, unclear why, check contact jacobian calculation

--- a/example/plugins/CMakeLists.txt
+++ b/example/plugins/CMakeLists.txt
@@ -1,10 +1,10 @@
-add_library(drive-robot drive-robot.cpp)
+add_library(drive-robot MODULE drive-robot.cpp)
 target_link_libraries(drive-robot ${REQLIBS})
 
-add_library(ik-feet ik_feet.cpp)
+add_library(ik-feet MODULE ik_feet.cpp)
 target_link_libraries(ik-feet ${REQLIBS})
 
-add_library(gait-planner gait-planner.cpp)
+add_library(gait-planner MODULE gait-planner.cpp)
 target_link_libraries(gait-planner ${REQLIBS})
 
 add_library(joint-PID-controller MODULE joint-PID-controller.cpp)
@@ -15,3 +15,6 @@ target_link_libraries(eef-PID-controller ${REQLIBS})
 
 add_library(stand-trajectory MODULE stand.cpp)
 target_link_libraries(stand-trajectory ${REQLIBS})
+
+add_library(inverse-dynamics MODULE inverse_dynamics.cpp)
+target_link_libraries(inverse-dynamics ${REQLIBS})
