--- a/example/plugins/CMakeLists.txt
+++ b/example/plugins/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(drive-robot MODULE drive-robot.cpp)
-target_link_libraries(drive-robot ${REQLIBS})
+add_library(waypoints MODULE waypoints.cpp)
+target_link_libraries(waypoints ${REQLIBS})
 
 add_library(ik-feet MODULE ik-feet.cpp)
 target_link_libraries(ik-feet ${REQLIBS})
@@ -23,7 +23,11 @@ add_library(inverse-dynamics MODULE inverse-dynamics.cpp)
 target_link_libraries(inverse-dynamics ${REQLIBS})
 
 find_package(SDL2)
+find_package(curses)
 IF(SDL2_FOUND)
+  IF(CURSES_FOUND)
+    add_definitions( -DUSE_CURSES )
+  ENDIF(CURSES_FOUND)
   add_library(gamepad MODULE gamepad.cpp)
-  target_link_libraries(gamepad ${REQLIBS} SDL2)
+  target_link_libraries(gamepad ${REQLIBS} ${SDL2_LIBRARIES} ${CURSES_LIBRARIES})
 ENDIF(SDL2_FOUND)
