--- a/example/plugins/CMakeLists.txt
+++ b/example/plugins/CMakeLists.txt
@@ -7,7 +7,7 @@ target_link_libraries(ik-feet ${REQLIBS})
 add_library(stabilization MODULE stabilization.cpp)
 target_link_libraries(stabilization ${REQLIBS})
 
-add_library(gait-planner MODULE gait-planner.cpp)
+add_library(gait-planner MODULE dynamic-gait-planner.cpp)
 target_link_libraries(gait-planner ${REQLIBS})
 
 add_library(joint-PID-controller MODULE joint-PID-controller.cpp)
