added non-functional hopper to epo

--- a/example/models/hopper/model.config
+++ b/example/models/hopper/model.config
@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
 
 <model>
-  <name>links</name>
+  <name>hopper</name>
   <sdf version="1.5">model.sdf</sdf>
 
   <author>
     <name>Samuel Zapolsky</name>
-    <email>samzo@gmail.com</email>
+    <email>samzapo@gmail.com</email>
   </author>
 
   <description>
-    18 DOF quadruped robot
+    9 DOF monopod robot
   </description>
 </model>
