debugging SDF parsing error

--- a/example/interfaces/CMakeLists.txt
+++ b/example/interfaces/CMakeLists.txt
@@ -36,7 +36,11 @@ ENDIF(GAZEBO_FOUND)
 # look for DXL
 find_package(DXL)
 IF(DXL_FOUND)
+  add_definitions(-DUSE_DXL)
+ENDIF(DXL_FOUND)
   add_executable(PacerMotorDriver ${CMAKE_SOURCE_DIR}/example/interfaces/motor.cpp)
-  target_link_libraries(PacerMotorDriver ${REQLIBS} dxl)
-  target_link_libraries(PacerMobyPlugin ${REQLIBS} dxl)
+  target_link_libraries(PacerMotorDriver ${REQLIBS})
+IF(DXL_FOUND)
+  target_link_libraries(PacerMotorDriver dxl)
+  target_link_libraries(PacerMobyPlugin dxl)
 ENDIF(DXL_FOUND)
