--- a/example/interfaces/CMakeLists.txt
+++ b/example/interfaces/CMakeLists.txt
@@ -54,7 +54,7 @@ IF(DXL_FOUND)
 ENDIF(DXL_FOUND)
 ENDIF(USE_DXL)
   add_executable(PacerMotorDriver ${CMAKE_SOURCE_DIR}/example/interfaces/motor.cpp)
-  target_link_libraries(PacerMotorDriver ${REQLIBS})
+  target_link_libraries(PacerMotorDriver ${REQLIBS} boost_thread-mt)
 IF(USE_DXL)
 IF(DXL_FOUND)
   target_link_libraries(PacerMotorDriver dxl)
