--- a/example/plugins/CMakeLists.txt
+++ b/example/plugins/CMakeLists.txt
@@ -12,6 +12,11 @@ ENDFOREACH(i)
 file(GLOB sub-dir "*")
 foreach(dir ${sub-dir})
   if(IS_DIRECTORY ${dir})
-    add_subdirectory( ${dir} )
+    get_filename_component(dir_name ${dir} NAME [cached])
+    if(${dir_name} STREQUAL "CMakeFiles")
+    #do nothing
+    else ()
+      add_subdirectory( ${dir} )
+    endif()
   endif()
 endforeach()
