--- a/example/interfaces/CMakeLists.txt
+++ b/example/interfaces/CMakeLists.txt
@@ -45,7 +45,7 @@ IF(GAZEBO_FOUND)
 ENDIF(GAZEBO_FOUND)
 ENDIF(USE_GAZEBO)
 
-set(USE_DXL CACHE BOOL false)
+option(USE_DXL "use dynamixel motor driver for motor control?" OFF)
 # look for DXL
 IF(USE_DXL)
 find_package(DXL)
@@ -53,11 +53,18 @@ IF(DXL_FOUND)
   add_definitions(-DUSE_DXL)
 ENDIF(DXL_FOUND)
 ENDIF(USE_DXL)
-  add_executable(PacerMotorDriver ${CMAKE_SOURCE_DIR}/example/interfaces/motor.cpp)
-  target_link_libraries(PacerMotorDriver ${REQLIBS} boost_thread-mt)
+
+add_executable(PacerMotorDriver ${CMAKE_SOURCE_DIR}/example/interfaces/motor.cpp)
+target_link_libraries(PacerMotorDriver ${REQLIBS})
+
 IF(USE_DXL)
 IF(DXL_FOUND)
   target_link_libraries(PacerMotorDriver dxl)
   target_link_libraries(PacerMobyPlugin dxl)
 ENDIF(DXL_FOUND)
 ENDIF(USE_DXL)
+
+find_package(Boost COMPONENTS thread OPTIONAL)
+if(${BOOST_THREAD_LIBRARY})
+  target_link_libraries(PacerMotorDriver ${BOOST_THREAD_LIBRARY})
+endif()
