--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -1,14 +1,11 @@
-
-if(${CMAKE_BUILD_TYPE})
-  if(${CMAKE_BUILD_TYPE} STREQUAL "DEBUG")
-    add_definitions(-DNO_GTEST)
-    add_executable(PacerTest main.cpp)
-    target_link_libraries(PacerTest MobyDriver Moby Pacer gtest)
-  else()
-    add_executable(PacerTest main.cpp)
-    target_link_libraries(PacerTest MobyDriver Moby Pacer gtest_main gtest)
+file(GLOB sub-dir "*")
+foreach(dir ${sub-dir})
+  if(IS_DIRECTORY ${dir})
+    get_filename_component(dir_name ${dir} NAME [cached])
+    if(${dir_name} STREQUAL "CMakeFiles")
+    #do nothing
+    else ()
+      add_subdirectory( ${dir} )
+    endif()
   endif()
-else()
-  add_executable(PacerTest main.cpp)
-  target_link_libraries(PacerTest MobyDriver Moby Pacer gtest_main gtest)
-endif()
+endforeach()
