--- a/test/RegressionTests/walking/CMakeLists.txt
+++ b/test/RegressionTests/walking/CMakeLists.txt
@@ -1,14 +1,19 @@
+get_filename_component(TEST_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+set(TEST_BIN_NAME ${TEST_NAME}.test)
 
 if(${CMAKE_BUILD_TYPE})
   if(${CMAKE_BUILD_TYPE} STREQUAL "DEBUG")
     add_definitions(-DNO_GTEST)
-    add_executable(PacerTest main.cpp)
-    target_link_libraries(PacerTest MobyDriver Moby Pacer gtest)
+    add_executable(${TEST_BIN_NAME} main.cpp)
+    target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer gtest)
   else()
-    add_executable(PacerTest main.cpp)
-    target_link_libraries(PacerTest MobyDriver Moby Pacer gtest_main gtest)
+    add_executable(${TEST_BIN_NAME} main.cpp)
+    target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer gtest_main gtest)
   endif()
 else()
-  add_executable(PacerTest main.cpp)
-  target_link_libraries(PacerTest MobyDriver Moby Pacer gtest_main gtest)
+  add_executable(${TEST_BIN_NAME} main.cpp)
+  target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer gtest_main gtest)
 endif()
+
+add_test(NAME ${TEST_BIN_NAME} COMMAND ${TEST_BIN_NAME} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+add_dependencies(regression-test ${TEST_BIN_NAME})
