--- a/test/RegressionTests/walking/CMakeLists.txt
+++ b/test/RegressionTests/walking/CMakeLists.txt
@@ -1,17 +1,16 @@
 get_filename_component(TEST_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 set(TEST_BIN_NAME ${TEST_NAME}.test)
 
-if(${CMAKE_BUILD_TYPE})
-  if(${CMAKE_BUILD_TYPE} STREQUAL "DEBUG")
-    add_definitions(-DNO_GTEST)
-    add_executable(${TEST_BIN_NAME} main.cpp)
-    target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer gtest)
-  else()
-    add_executable(${TEST_BIN_NAME} main.cpp)
-    target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer gtest_main gtest)
-  endif()
+# this is the directory, from which cmake was started, i.e. the top level source directory 
+MESSAGE( STATUS "CMAKE_BUILD_TYPE:         " ${CMAKE_BUILD_TYPE} )
+
+string( TOLOWER "${CMAKE_BUILD_TYPE}" CMAKE_BUILD_TYPE_lower )
+
+add_executable(${TEST_BIN_NAME} main.cpp)
+if(${CMAKE_BUILD_TYPE_lower} STREQUAL "debug")
+  add_definitions(-DNO_GTEST)
+  target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer gtest)
 else()
-  add_executable(${TEST_BIN_NAME} main.cpp)
   target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer gtest_main gtest)
 endif()
 
