--- a/test/RegressionTests/joystick/CMakeLists.txt
+++ b/test/RegressionTests/joystick/CMakeLists.txt
@@ -9,7 +9,7 @@ string( TOLOWER "${CMAKE_BUILD_TYPE}" CMAKE_BUILD_TYPE_lower )
 add_executable(${TEST_BIN_NAME} main.cpp)
 if(${CMAKE_BUILD_TYPE_lower} STREQUAL "debug")
   add_definitions(-DNO_GTEST)
-  target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer gtest)
+  target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer)
 else()
   target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer gtest_main gtest)
 endif()
