--- a/test/RegressionTests/walking/CMakeLists.txt
+++ b/test/RegressionTests/walking/CMakeLists.txt
@@ -4,11 +4,9 @@ set(TEST_BIN_NAME ${TEST_NAME}.test)
 # this is the directory, from which cmake was started, i.e. the top level source directory 
 MESSAGE( STATUS "CMAKE_BUILD_TYPE:         " ${CMAKE_BUILD_TYPE} )
 
-string( TOLOWER "${CMAKE_BUILD_TYPE}" CMAKE_BUILD_TYPE_lower )
-
 add_executable(${TEST_BIN_NAME} main.cpp)
-if(${CMAKE_BUILD_TYPE_lower} STREQUAL "debug")
-  add_definitions(-DNO_GTEST)
+if(NOT ${USE_GTEST})
+  add_definitions(-DUSE_GTEST)
   target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer)
 else()
   target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer gtest_main gtest)
