--- a/test/RegressionTests/walking/CMakeLists.txt
+++ b/test/RegressionTests/walking/CMakeLists.txt
@@ -5,11 +5,11 @@ set(TEST_BIN_NAME ${TEST_NAME}.test)
 MESSAGE( STATUS "CMAKE_BUILD_TYPE:         " ${CMAKE_BUILD_TYPE} )
 
 add_executable(${TEST_BIN_NAME} main.cpp)
-if(NOT ${USE_GTEST})
+if(${USE_GTEST})
   add_definitions(-DUSE_GTEST)
-  target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer)
-else()
   target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer gtest_main gtest)
+else()
+  target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer)
 endif()
 
 add_test(NAME ${TEST_BIN_NAME} COMMAND ${TEST_BIN_NAME} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
