USE_CURSES is now an option

--- a/example/plugins/CMakeLists.txt
+++ b/example/plugins/CMakeLists.txt
@@ -20,3 +20,8 @@ foreach(dir ${sub-dir})
     endif()
   endif()
 endforeach()
+
+option(USE_CURSES "Build Pacer with ncurses display support?" OFF)
+if(USE_CURSES)
+  add_definitions(-DUSE_CURSES)
+endif(USE_CURSES)
