--- a/example/plugins/CMakeLists.txt
+++ b/example/plugins/CMakeLists.txt
@@ -12,10 +12,7 @@ ENDFOREACH(i)
 file(GLOB sub-dir "*")
 foreach(dir ${sub-dir})
   if(IS_DIRECTORY ${dir})
-    get_filename_component(dir_name ${dir} NAME [cached])
-    if(${dir_name} STREQUAL "CMakeFiles")
-    #do nothing
-    else ()
+    if(EXISTS ${dir}/CMakeLists.txt)
       add_subdirectory( ${dir} )
     endif()
   endif()
