--- a/test/RegressionTests/CMakeLists.txt
+++ b/test/RegressionTests/CMakeLists.txt
@@ -1,10 +1,7 @@
 file(GLOB sub-dir "*")
 foreach(dir ${sub-dir})
   if(IS_DIRECTORY ${dir})
-    get_filename_component(dir_name ${dir} NAME)
-    if(${dir_name} STREQUAL "CMakeFiles")
-    #do nothing
-    else ()
+    if(EXISTS ${dir}/CMakeLists.txt)
       add_subdirectory( ${dir} )
     endif()
   endif()
