--- a/test/RegressionTests/jumping/model.xml.in
+++ b/test/RegressionTests/jumping/model.xml.in
@@ -25,29 +25,34 @@
   <DisabledPair object1-id="LINKS" object2-id="LINKS"/>
   <DynamicBody dynamic-body-id="LINKS" />
   <DynamicBody dynamic-body-id="GROUND" />
-  <ContactParameters object1-id="LINKS" object2-id="GROUND" mu-coulomb="1" mu-viscous="0" epsilon="0.0" compliant="true" penalty-kv="100" penalty-kp="100000"  alpha="100" />
-  <!-- setup a planar joint -->
-<!--
-  <ImplicitConstraint joint-id="planar" /> 
--->
+  <DynamicBody dynamic-body-id="TAKEOFF" />
+  <DynamicBody dynamic-body-id="LANDING" />
+  <ContactParameters object1-id="LINKS" object2-id="GROUND" mu-coulomb="10" mu-viscous="0" epsilon="0.0" compliant="true" penalty-kv="100" penalty-kp="100000"  alpha="100" />
 </TimeSteppingSimulator>
-  <!-- setup a planar joint -->
-<!--
-  <PlanarJoint id="planar" inboard-link-id="GROUND" outboard-link-id="BODY0" normal="1 0 0" location="0 0 0" />
--->
 
-<SDF filename="../../../example/models/links/model.sdf"/>
+<SDF filename="@@PACER_MODEL_PATH@@/@@TESTING_ROBOT@@/model.sdf"/>
 
   <!-- setup the platform rigid body; it is not active -->
-     <Box id="ground-primitive-viz" rpy="1.5708 0.0 0"  xlen="8" ylen="0.001" zlen="8" />
-     <Plane id="ground-primitive" rpy="1.5708 0 0" />
+<Plane id="ground-primitive" rpy="1.5708 0 0" />
 <!--<Heightmap id="ground-primitive" filename="heightmap.mat" width="1" depth="1" rpy="1.5708 0 0" />-->
 <RigidBody id="GROUND" color="0.6 0.6 0.6 0" enabled="false"
   position="0 0 0.0"
-  visualization-id="ground-primitive-viz"
+  visualization-id="ground-primitive"
   compliant="false">
     <CollisionGeometry primitive-id="ground-primitive" />
   </RigidBody>
+  
+  <Box id="sheet" rpy="1.5708 0.0 0"  xlen="0.45" ylen="0.05" zlen="0.45" />
+<RigidBody id="TAKEOFF" color="0.6 0.6 0.6 0" enabled="false"
+  position="0 0 -0.025"
+  visualization-id="sheet"
+  compliant="false">
+</RigidBody>
+<RigidBody id="LANDING" color="0.6 0.6 0.6 0" enabled="false"
+  position="0.5 0 -0.025"
+  visualization-id="sheet"
+  compliant="false">
+</RigidBody>
 
   </MOBY>
 </XML>
