--- a/test/RegressionTests/trotting/model.xml.in
+++ b/test/RegressionTests/trotting/model.xml.in
@@ -25,34 +25,29 @@
   <DisabledPair object1-id="LINKS" object2-id="LINKS"/>
   <DynamicBody dynamic-body-id="LINKS" />
   <DynamicBody dynamic-body-id="GROUND" />
-  <DynamicBody dynamic-body-id="TAKEOFF" />
-  <DynamicBody dynamic-body-id="LANDING" />
-  <ContactParameters object1-id="LINKS" object2-id="GROUND" mu-coulomb="10" mu-viscous="0" epsilon="0.0" compliant="true" penalty-kv="100" penalty-kp="100000"  alpha="100" />
+  <ContactParameters object1-id="LINKS" object2-id="GROUND" mu-coulomb="1" mu-viscous="0" epsilon="0.0" compliant="true" penalty-kv="100" penalty-kp="100000"  alpha="100" />
+  <!-- setup a planar joint -->
+<!--
+  <ImplicitConstraint joint-id="planar" /> 
+-->
 </TimeSteppingSimulator>
+  <!-- setup a planar joint -->
+<!--
+  <PlanarJoint id="planar" inboard-link-id="GROUND" outboard-link-id="BODY0" normal="1 0 0" location="0 0 0" />
+-->
 
-<SDF filename="../../../example/models/links/model.sdf"/>
+<SDF filename="@@PACER_MODEL_PATH@@/@@TESTING_ROBOT@@/model.sdf"/>
 
   <!-- setup the platform rigid body; it is not active -->
-<Plane id="ground-primitive" rpy="1.5708 0 0" />
+     <Box id="ground-primitive-viz" rpy="1.5708 0.0 0"  xlen="8" ylen="0.001" zlen="8" />
+     <Plane id="ground-primitive" rpy="1.5708 0 0" />
 <!--<Heightmap id="ground-primitive" filename="heightmap.mat" width="1" depth="1" rpy="1.5708 0 0" />-->
 <RigidBody id="GROUND" color="0.6 0.6 0.6 0" enabled="false"
   position="0 0 0.0"
-  visualization-id="ground-primitive"
+  visualization-id="ground-primitive-viz"
   compliant="false">
     <CollisionGeometry primitive-id="ground-primitive" />
   </RigidBody>
-  
-  <Box id="sheet" rpy="1.5708 0.0 0"  xlen="0.45" ylen="0.05" zlen="0.45" />
-<RigidBody id="TAKEOFF" color="0.6 0.6 0.6 0" enabled="false"
-  position="0 0 -0.025"
-  visualization-id="sheet"
-  compliant="false">
-</RigidBody>
-<RigidBody id="LANDING" color="0.6 0.6 0.6 0" enabled="false"
-  position="0.5 0 -0.025"
-  visualization-id="sheet"
-  compliant="false">
-</RigidBody>
 
   </MOBY>
 </XML>
