--- a/test/RegressionTests/jumping/vars.xml.in
+++ b/test/RegressionTests/jumping/vars.xml.in
@@ -1,5 +1,5 @@
 <XML>
-  <logging type="string">DEBUG1</logging>
+  <logging type="string">NONE</logging>
   <init-file type="file">@@PACER_MODEL_PATH@@/@@TESTING_ROBOT@@/init.xml</init-file>
   <extra-files type="file">@@PACER_MODEL_PATH@@/@@TESTING_ROBOT@@/control-uncertainty.xml</extra-files>
   <task-file type="file">plugins.xml</task-file>
